[package]
name = "bk_allocator"
version = "0.1.0"
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
description = "FreeBSD's kernel space allocator"
edition = "2018"
license = "BSD-2-Clause"

[lib]
name = "bk_allocator"
path = "src/lib.rs"
crate-type = ["rlib"]
test = false
doc = false


[dependencies]
bk_primitives = "0.1.0"
